# airhockey

./: .gitignore  CLAUDE.md  Untitled
.claude/memory/: project_worklog.md  sFoundation_serial_init.md  user_preferences.md
ai/: pyproject.toml
ai/airhockey/: __init__.py  batch_env.py  batch_physics.py  cdpr_test.py  curriculum.py  dynamics.py  env.py  hardware.py  physics.py  recorder.py  rewards.py  server.py
ai/airhockey/web/: app.js  index.html  style.css
ai/tests/: test_batch_physics.py  test_camera_delay.py  test_curriculum_integration.py  test_env_parity.py  test_reward_parity.py  test_validation.py
ai/training/: index.html
airhockey/: __main__.py  env.py  physics.py  recorder.py  rewards.py  server.py
airhockey/web/: app.js  index.html  style.css
fw/: .gitignore
fw/include/: cdpr.h  cdpr_config.h  serial_protocol.h
fw/src/: cdpr.cpp  main.cpp
hw/puck_led/: puck_led.kicad_pro  puck_led.kicad_sch
hw/puck_led/EASYEDA_MODELS/: C0402_L1.0-W0.5-H0.5.step
hw/puck_led/EasyEDA_Lib/: EasyEDA_Lib.elibz
hw/puck_led/puck_led/: puck_led.kicad_pcb
hw/stepper_breakout/: .gitignore  fp-lib-table  output.kicad_sch  stepper_breakout.kicad_pcb  stepper_breakout.kicad_pro  stepper_breakout.kicad_sch  sym-lib-table
hw/stepper_breakout/EASYEDA_MODELS/: CONN-TH_HAA420A-4A.step  HDR-M-2.54_1x3.step  HDR-TH_8P-P2.54-V-M.step  SOIC-14_L8.6-W3.9-H1.8-LS6.0-P1.27.step
runs/ppo_v1/: evaluations.npz
runs/ppo_v2/: evaluations.npz
sw/: .gitignore  99-sc4hub.rules  Makefile  SETUP.md  compile_commands.json  setup.sh
sw/lib/: cdpr.cpp  cdpr.h  cdpr_config.h
(+7 files in other folders)
